Configurando o header do projeto

--- a/index.html
+++ b/index.html
@@ -11,9 +11,35 @@
 </head>
 
 <body>
-    <div class="top-bar">
-        Qual comprar? 
+    <div class="top-bar"> Qual comprar? </div>
+
+    <div class="container">
+    
+        <div class="header">
+
+            <h1 class="headline"> Os melhores notebooks para programadores! </h1>
+
+            <h2 class="subtitle"> Veja quais são os notebooks mais procurados por profissionais da área de TI.</h2>
+
+            <div class="author">
+                Por Matheus Henrique de Souza.
+            </div>
+
+            <small>
+                <sub>
+                    Atualizado em 02/12/2022.
+                </sub>
+            </small>
+
+        </div>
+
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/matheus-henrique-de-souza-75616b161/">
+                <img class="social-icon" src="./image/linkedin_ico.png" alt="linkedin">
+            </a>
+        </div>
     </div>
+    <hr>
     
 </body>
 </html>
